--- a/index.html
+++ b/index.html
@@ -1,5 +1,182 @@
-<script language="javascript">
 
-// created by abdelkarim aswan all the copyright has been saved for the rois.io  //
-  document.write(unescape('%3C%21%44%4F%43%54%59%50%45%20%68%74%6D%6C%3E%0A%3C%68%74%6D%6C%3E%0A%3C%74%69%74%6C%65%3E%61%73%77%61%6E%20%6E%6F%74%65%3C%2F%74%69%74%6C%65%3E%0A%3C%6C%69%6E%6B%20%72%65%6C%3D%22%69%63%6F%6E%22%20%68%72%65%66%3D%22%68%74%74%70%73%3A%2F%2F%72%61%77%2E%67%69%74%68%75%62%75%73%65%72%63%6F%6E%74%65%6E%74%2E%63%6F%6D%2F%61%6E%64%6F%72%72%61%6E%64%65%64%65%64%2F%6E%6F%74%65%2F%6D%61%73%74%65%72%2F%66%61%76%69%63%6F%6E%2E%69%63%6F%22%20%74%79%70%65%3D%22%69%6D%61%67%65%2F%78%2D%69%63%6F%6E%22%3E%0A%3C%2F%68%65%61%64%3E%0A%3C%73%74%79%6C%65%3E%0A%0A%2E%69%6E%70%75%74%32%7B%0A%66%6F%6E%74%3A%20%69%6E%68%65%72%69%74%3B%0A%6D%61%72%67%69%6E%3A%20%30%3B%0A%6F%76%65%72%66%6C%6F%77%3A%20%76%69%73%69%62%6C%65%3B%0A%77%69%64%74%68%3A%20%31%35%25%3B%0A%70%61%64%64%69%6E%67%3A%20%31%32%70%78%20%32%30%70%78%3B%0A%62%6F%78%2D%73%69%7A%69%6E%67%3A%20%62%6F%72%64%65%72%2D%62%6F%78%3B%0A%62%6F%72%64%65%72%3A%20%33%70%78%20%73%6F%6C%69%64%20%23%30%30%65%32%66%66%3B%0A%74%72%61%6E%73%69%74%69%6F%6E%3A%20%30%2E%35%73%3B%0A%7D%0A%2E%69%6E%70%75%74%31%7B%0A%66%6F%6E%74%3A%20%69%6E%68%65%72%69%74%3B%0A%6D%61%72%67%69%6E%3A%20%30%3B%0A%6F%76%65%72%66%6C%6F%77%3A%20%76%69%73%69%62%6C%65%3B%0A%77%69%64%74%68%3A%20%31%30%30%25%3B%0A%70%61%64%64%69%6E%67%3A%20%31%32%70%78%20%32%30%70%78%3B%0A%62%6F%78%2D%73%69%7A%69%6E%67%3A%20%62%6F%72%64%65%72%2D%62%6F%78%3B%0A%62%6F%72%64%65%72%3A%20%33%70%78%20%73%6F%6C%69%64%20%23%66%30%30%3B%0A%74%72%61%6E%73%69%74%69%6F%6E%3A%20%30%2E%35%73%3B%0A%0A%7D%0A%0A%62%6F%64%79%7B%0A%62%61%63%6B%67%72%6F%75%6E%64%2D%69%6D%61%67%65%3A%20%75%72%6C%28%27%68%74%74%70%73%3A%2F%2F%77%61%6C%6C%70%61%70%65%72%61%63%63%65%73%73%2E%63%6F%6D%2F%66%75%6C%6C%2F%36%32%32%35%32%33%2E%6A%70%67%27%29%3B%0A%0A%0A%7D%0A%0A%0A%0A%2E%62%75%74%74%6F%6E%31%7B%0A%62%6F%78%2D%73%69%7A%69%6E%67%3A%20%69%6E%68%65%72%69%74%3B%0A%66%6F%6E%74%3A%20%69%6E%68%65%72%69%74%3B%0A%6F%76%65%72%66%6C%6F%77%3A%20%76%69%73%69%62%6C%65%3B%0A%2D%77%65%62%6B%69%74%2D%61%70%70%65%61%72%61%6E%63%65%3A%20%62%75%74%74%6F%6E%3B%0A%62%61%63%6B%67%72%6F%75%6E%64%2D%63%6F%6C%6F%72%3A%20%23%30%35%63%39%65%38%3B%0A%62%6F%72%64%65%72%3A%20%6E%6F%6E%65%3B%0A%63%6F%6C%6F%72%3A%20%79%65%6C%6C%6F%77%3B%0A%70%61%64%64%69%6E%67%3A%20%31%35%70%78%20%33%32%70%78%3B%0A%74%65%78%74%2D%64%65%63%6F%72%61%74%69%6F%6E%3A%20%6E%6F%6E%65%3B%0A%6D%61%72%67%69%6E%3A%20%34%70%78%20%32%70%78%3B%0A%77%69%64%74%68%3A%20%31%35%25%3B%0A%7D%0A%0A%0A%0A%0A%0A%0A%2E%62%75%74%74%6F%6E%32%7B%0A%0A%62%6F%78%2D%73%69%7A%69%6E%67%3A%20%69%6E%68%65%72%69%74%3B%0A%66%6F%6E%74%3A%20%69%6E%68%65%72%69%74%3B%0A%6F%76%65%72%66%6C%6F%77%3A%20%76%69%73%69%62%6C%65%3B%0A%2D%77%65%62%6B%69%74%2D%61%70%70%65%61%72%61%6E%63%65%3A%20%62%75%74%74%6F%6E%3B%0A%62%61%63%6B%67%72%6F%75%6E%64%2D%63%6F%6C%6F%72%3A%20%23%30%35%63%39%65%38%3B%0A%62%6F%72%64%65%72%3A%20%6E%6F%6E%65%3B%0A%63%6F%6C%6F%72%3A%20%79%65%6C%6C%6F%77%3B%0A%70%61%64%64%69%6E%67%3A%20%31%35%70%78%20%33%32%70%78%3B%0A%74%65%78%74%2D%64%65%63%6F%72%61%74%69%6F%6E%3A%20%6E%6F%6E%65%3B%0A%6D%61%72%67%69%6E%3A%20%34%70%78%20%32%70%78%3B%0A%77%69%64%74%68%3A%20%31%35%25%3B%0A%7D%0A%2E%67%69%66%69%6D%61%67%65%7B%0A%0A%70%6F%73%69%74%69%6F%6E%3A%20%61%62%73%6F%6C%75%74%65%3B%0A%20%20%20%74%6F%70%3A%20%32%25%3B%0A%20%20%20%6C%65%66%74%3A%20%34%30%25%3B%0A%77%69%64%74%68%3A%20%31%30%25%3B%0A%6D%61%72%67%69%6E%2D%6C%65%66%74%3A%20%30%25%3B%0A%64%69%73%70%6C%61%79%3A%6E%6F%6E%65%3B%0A%0A%7D%0A%2E%69%6D%61%67%65%32%7B%0A%0A%70%6F%73%69%74%69%6F%6E%3A%20%61%62%73%6F%6C%75%74%65%3B%0A%20%20%20%74%6F%70%3A%20%31%39%2E%35%25%3B%0A%20%20%20%6C%65%66%74%3A%20%31%35%25%3B%0A%77%69%64%74%68%3A%20%33%25%3B%0A%6D%61%72%67%69%6E%2D%6C%65%66%74%3A%20%30%25%3B%0A%0A%0A%7D%0A%2E%69%6D%61%67%7B%0A%0A%70%6F%73%69%74%69%6F%6E%3A%20%61%62%73%6F%6C%75%74%65%3B%0A%20%20%20%74%6F%70%3A%20%31%25%3B%0A%20%20%20%6C%65%66%74%3A%20%30%25%3B%0A%77%69%64%74%68%3A%20%32%2E%35%25%3B%0A%6D%61%72%67%69%6E%2D%6C%65%66%74%3A%20%30%25%3B%0A%0A%0A%7D%0A%3C%2F%73%74%79%6C%65%3E%0A%3C%62%6F%64%79%3E%0A%3C%69%6D%67%20%63%6C%61%73%73%3D%22%69%6D%61%67%22%20%73%72%63%3D%22%68%74%74%70%73%3A%2F%2F%69%6D%67%2E%69%63%6F%6E%73%38%2E%63%6F%6D%2F%70%6C%61%73%74%69%63%69%6E%65%2F%31%30%30%2F%30%30%30%30%30%30%2F%62%61%6C%6C%2D%70%6F%69%6E%74%2D%70%65%6E%2E%70%6E%67%22%3E%0A%3C%69%6D%67%20%20%63%6C%61%73%73%3D%22%69%6D%61%67%65%32%22%73%72%63%3D%22%68%74%74%70%73%3A%2F%2F%69%6D%67%2E%69%63%6F%6E%73%38%2E%63%6F%6D%2F%70%6C%61%73%74%69%63%69%6E%65%2F%31%30%30%2F%30%30%30%30%30%30%2F%6C%6F%63%6B%2D%2D%76%31%2E%70%6E%67%22%3E%0A%3C%69%6D%67%20%63%6C%61%73%73%3D%22%67%69%66%69%6D%61%67%65%22%73%72%63%3D%27%68%74%74%70%73%3A%2F%2F%69%6D%67%2E%64%65%76%72%61%6E%74%2E%63%6F%6D%2F%64%65%76%72%61%6E%74%2F%72%61%6E%74%2F%72%5F%32%32%38%34%31%35%5F%66%44%57%6D%74%2E%67%69%66%27%2F%3E%0A%3C%73%63%72%69%70%74%20%73%72%63%3D%22%68%74%74%70%73%3A%2F%2F%77%77%77%2E%67%73%74%61%74%69%63%2E%63%6F%6D%2F%66%69%72%65%62%61%73%65%6A%73%2F%33%2E%36%2E%33%2F%66%69%72%65%62%61%73%65%2E%6A%73%22%3E%3C%2F%73%63%72%69%70%74%3E%0A%3C%73%63%72%69%70%74%20%73%72%63%3D%22%63%6F%6E%74%65%6E%74%2E%6A%73%22%3E%3C%2F%73%63%72%69%70%74%3E%0A%3C%74%65%78%74%61%72%65%61%20%72%65%71%75%69%72%65%64%3D%22%72%65%71%75%69%72%65%64%22%20%70%6C%61%63%65%68%6F%6C%64%65%72%3D%22%77%72%69%74%65%20%74%68%69%6E%67%73%20%20%22%20%69%64%3D%22%74%65%78%74%22%20%63%6C%61%73%73%3D%22%69%6E%70%75%74%31%22%73%74%79%6C%65%3D%22%6D%61%72%67%69%6E%3A%20%30%70%78%3B%20%77%69%64%74%68%3A%20%31%32%35%35%70%78%3B%20%68%65%69%67%68%74%3A%20%31%34%36%70%78%3B%22%3E%3C%2F%74%65%78%74%61%72%65%61%3E%0A%3C%2F%70%3E%3C%69%6E%70%75%74%20%69%64%3D%22%70%61%73%73%22%20%63%6C%61%73%73%3D%22%69%6E%70%75%74%32%22%20%72%65%71%75%69%72%65%64%3D%22%72%65%71%75%69%72%65%64%22%20%70%6C%61%63%65%68%6F%6C%64%65%72%3D%22%67%65%6E%65%72%61%74%65%20%61%20%70%61%73%73%77%6F%72%64%20%20%22%3E%3C%2F%69%6E%70%75%74%3E%0A%3C%2F%70%3E%3C%62%75%74%74%6F%6E%20%63%6C%61%73%73%3D%22%62%75%74%74%6F%6E%31%22%20%6F%6E%63%6C%69%63%6B%3D%22%73%61%76%65%69%74%28%29%22%3E%73%61%76%65%20%3C%2F%62%75%74%74%6F%6E%3E%0A%3C%2F%70%3E%3C%62%75%74%74%6F%6E%20%63%6C%61%73%73%3D%22%62%75%74%74%6F%6E%32%22%20%6F%6E%63%6C%69%63%6B%3D%22%72%65%73%65%61%74%69%74%28%29%22%3E%72%65%73%65%61%74%20%6E%6F%74%65%3C%2F%62%75%74%74%6F%6E%3E%0A%0A%3C%2F%62%6F%64%79%3E%0A%3C%2F%68%74%6D%6C%3E%0A'));
+<!DOCTYPE html>
+<html>
+<title>aswan note</title>
+<link rel="icon" href="https://raw.githubusercontent.com/andorrandeded/note/master/favicon.ico" type="image/x-icon">
+</head>
+<style>
+
+.input2{
+font: inherit;
+margin: 0;
+overflow: visible;
+width: 15%;
+padding: 12px 20px;
+box-sizing: border-box;
+border: 3px solid #00e2ff;
+transition: 0.5s;
+}
+.input1{
+font: inherit;
+margin: 0;
+overflow: visible;
+width: 100%;
+padding: 12px 20px;
+box-sizing: border-box;
+border: 3px solid #f00;
+transition: 0.5s;
+
+}
+
+body{
+background-image: url('https://wallpaperaccess.com/full/622523.jpg');
+
+
+}
+
+
+
+.button1{
+box-sizing: inherit;
+font: inherit;
+overflow: visible;
+-webkit-appearance: button;
+background-color: #05c9e8;
+border: none;
+color: yellow;
+padding: 15px 32px;
+text-decoration: none;
+margin: 4px 2px;
+width: 15%;
+}
+
+
+
+
+
+
+.button2{
+
+box-sizing: inherit;
+font: inherit;
+overflow: visible;
+-webkit-appearance: button;
+background-color: #05c9e8;
+border: none;
+color: yellow;
+padding: 15px 32px;
+text-decoration: none;
+margin: 4px 2px;
+width: 15%;
+}
+.gifimage{
+
+position: absolute;
+   top: 2%;
+   left: 40%;
+width: 10%;
+margin-left: 0%;
+display:none;
+
+}
+.image2{
+
+position: absolute;
+   top: 19.5%;
+   left: 15%;
+width: 3%;
+margin-left: 0%;
+
+
+}
+.imag{
+
+position: absolute;
+   top: 1%;
+   left: 0%;
+width: 2.5%;
+margin-left: 0%;
+
+
+}
+</style>
+<body>
+<img class="imag" src="https://img.icons8.com/plasticine/100/000000/ball-point-pen.png">
+<img  class="image2"src="https://img.icons8.com/plasticine/100/000000/lock--v1.png">
+<img class="gifimage"src='https://img.devrant.com/devrant/rant/r_228415_fDWmt.gif'/>
+<script src="https://www.gstatic.com/firebasejs/3.6.3/firebase.js"></script>
+<script src="content.js"></script>
+<textarea required="required" placeholder="write things  " id="text" class="input1"style="margin: 0px; width: 1255px; height: 146px;"></textarea>
+</p><input id="pass" class="input2" required="required" placeholder="generate a password  "></input>
+</p><button class="button1" onclick="saveit()">save </button>
+</p><button class="button2" onclick="reseatit()">reseat note</button>
+<script id="erasable" type="text/javascript">
+ var firebaseConfig = {
+    apiKey: "AIzaSyCywpnEYimtpM82G5PtgkI4vvBxyIVKAXw",
+    authDomain: "myfarst-8163c.firebaseapp.com",
+    databaseURL: "https://myfarst-8163c.firebaseio.com",
+    projectId: "myfarst-8163c",
+    storageBucket: "myfarst-8163c.appspot.com",
+    messagingSenderId: "398712145622",
+    appId: "1:398712145622:web:7eadea70d4e28009172b77",
+    measurementId: "G-HQMESHXVLP"
+  };
+firebase.initializeApp(firebaseConfig);
+
+
+
+
+
+//faltar@deocaaocaelvallenosetoca.cf//
+
+
+
+
+function saveit() {
+not=document.getElementById("text").value;
+reaseat=document.getElementById("pass").value;
+if(not== ""||reaseat ==""){
+document.getElementById("text").placeholder="can not be empty"
+document.getElementById("pass").placeholder="can not be empty"
+}else{
+
+
+Ref = firebase.database().ref("people's notes").child(reaseat);
+Ref.set(not);
+
+
+
+
+}
+}
+function reseatit(){
+reaseat=document.getElementById("pass").value;
+
+if(reaseat==""){
+console.log("nothing in here");
+document.getElementById("pass").placeholder="password  farst"
+}else{
+document.querySelector("body > img.gifimage").style="display: initial";
+setTimeout (function(){
+document.querySelector("body > img.gifimage").style="display: none";
+
+},700);
+Ref = firebase.database().ref("people's notes").child(reaseat);
+Ref.once("value").then(function(snapshot) {
+ 
+var  data = snapshot.val(); 
+if(data==null){
+console.log("code4545");
+}else{
+
+var  data = snapshot.val(); 
+document.getElementById("text").value=data;
+}
+
+});
+}
+}
+    document.getElementById('erasable').innerHTML = "";
 </script>
+</body>
+</html>
